--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: flex-end;
 }
-.racetrack {
+#racetrack {
     background-color: beige;
     height: 200px;
     width: 1000px;
@@ -34,3 +34,4 @@
     flex-direction: row;
     
 }
+
