--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,11 @@
 .racers {
     background-color: white;
 }
+
+#gameover {
+    opacity: 0;
+    position: absolute;
+    top: 20px;
+    right: 50%;
+    
+}
