--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,8 @@ h3 {
 
 }
 
+
+
 .racers {
     width: 50px;
     height: 30px;
@@ -108,6 +110,33 @@ h3 {
 
 }
 
+#rules {
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: chocolate;
+    color: black;
+    font-family: 'Press Start 2P', cursive;
+    font-size: medium;
+    position: relative;
+   
+
+}
+#rules-text {
+    background-color: red;
+    color: white;
+    width: 1000px;
+    position:relative;
+    z-index: 10;
+    left: 300px;
+    bottom: 700px;
+    font-family: 'Press Start 2P', cursive;
+    text-align: left;
+}
+.title {
+    text-align: center;
+    font-size: 20px;
+}
 /*
 .betting-selection{
 
