--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,19 @@ h3 {
    
 }
 
+#music {
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: chocolate;
+    color: black;
+    font-family: 'Press Start 2P', cursive;
+    font-size: medium;
+    position: relative;
+    top: 5px;
+    left: 150px;
+}
+
 
 #racetrack {
     background-color: rgb(72, 64, 33);
@@ -266,6 +279,5 @@ h3 {
 #messages {
     position: absolute;
     top: 600px;
-    left: 550px;
-    
+    left: 550px;   
 }
