--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ h3 {
     font-size: medium;
     position: relative;
     top: 50px;
-    left: 0px;
+    left: 10px;
 
 }
 
@@ -119,7 +119,7 @@ h3 {
     font-size: medium;
     position: relative;
     top: 150px;
-    right:700px;
+    right: 625px;
    
 }
 
@@ -133,9 +133,20 @@ h3 {
     font-size: medium;
     position: relative;
     top: 5px;
-    left: 150px;
+    left: 220px;
 }
-
+#music-off {
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: chocolate;
+    color: black;
+    font-family: 'Press Start 2P', cursive;
+    font-size: medium;
+    position: relative;
+    top: 5px;
+    left:250px;
+}
 
 #racetrack {
     background-color: rgb(72, 64, 33);
