wireframe added to readme

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,12 @@ h1{
     text-align: center;
     font-size: 100px;
     font-family: 'UnifrakturCook', cursive;
+    text-shadow: 4px 2px 1px rgb(14, 14, 14);
 }
  h2{
     font-family: 'UnifrakturCook', cursive; 
-        font-size: 40px;
+    font-size: 40px;
+    text-shadow: 2px 2px 5px rgb(182, 24, 24);
 }
  
 h3 {
@@ -21,6 +23,7 @@ h3 {
     position: relative;
     top: 50px;
     right: auto;
+    text-shadow: 2px 2px 5px rgb(182, 24, 24);
 }
 
 #point-bank-display {
