--- a/styleswithboot.css
+++ b/styleswithboot.css
@@ -1,23 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Palette+Mosaic&family=Poiret+One&family=UnifrakturCook:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=UnifrakturCook:wght@700&display=swap');
  /* font-family: 'Press Start 2P', cursive;  font-family: 'UnifrakturCook', cursive;*/
+ @media (max-width: 500px) {
+ 
  body {
     background-color: rgb(110, 70, 123);
 }
 h1{
     color:rgba(254, 7, 7, 0.838);
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
    
 }
  h2{
     font-family: 'UnifrakturCook', cursive; 
-        font-size: 40px;
+        font-size: 20px;
 }
  
 h3 {
     font-family: 'UnifrakturCook', cursive;
-    font-size: 35px;
+    font-size: 15px;
     text-align: center;
     position: relative;
     top: 50px;
@@ -25,6 +27,7 @@ h3 {
 }
 
 #racetrack {
+    transform: rotate(90deg);
     
 }
 
@@ -119,3 +122,5 @@ h3 {
 }
 #messages {
 } */
+
+}
